# cmd-rust

./: Cargo.toml
calr/: Cargo.toml
calr/src/: main.rs
catr/: Cargo.toml
catr/src/: lib.rs
commr/: Cargo.toml
commr/src/: main.rs
cutr/: Cargo.toml
cutr/src/: main.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: main.rs
fortuner/: Cargo.toml
fortuner/src/: main.rs
grepr/: Cargo.toml
grepr/src/: main.rs
headr/: Cargo.toml  mk-outs.sh
headr/src/: main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
lsr/: Cargo.toml
lsr/src/: main.rs  owner.rs
src/: main.rs
tailr/: Cargo.toml
tailr/src/: main.rs
tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: main.rs
wcr/: Cargo.toml
wcr/src/: main.rs
