[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
pretty_assertions = "1.4.0"
regex = "1.10.6"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
