[package]
name = "lsr"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.89"
chrono = "0.4.38"
tabular = "0.2.0"
users = "0.11.0"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
